Fixing homepage ipad layout issue.

--- a/source/css/objects/_carousels.scss
+++ b/source/css/objects/_carousels.scss
@@ -70,6 +70,8 @@
 		border-bottom: $border-style;
 		padding-right: $pad;
 		width: 40%;
+		@include flexbox;
+		@include align-items(center);
 	}
 	&:after {
 		@media (min-width: $px500) and (max-width: $medium-break), (min-width: $large-break) {
@@ -108,7 +110,8 @@
 	padding: $pad;
 	@media (min-width: $px500) and (max-width: $medium-break), (min-width: $large-break) {
 		padding: 0;
-		@include vertical-align;
+		@include flexbox;
+		@include align-items(center);
 	}
 	@media (min-width: $px700) and (max-width: $medium-break), (min-width: $large-break) {
 		font-size: rem(22);
