--- a/source/css/objects/_sections.scss
+++ b/source/css/objects/_sections.scss
@@ -519,9 +519,6 @@
 
 .page--top {
   margin-bottom: rem(3);
-  @include mq($large-break, max) {
-    max-width: rem(800);
-  }
 }
 // Right section of the home page containing a block and 300x250 ad.
 .home-right-blocks {
